--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -15,3 +15,4 @@
           %strong= task.title
         %td.text-info= task.created_at
         %td.text-success= task.completed
+#modal.modal.fade
