--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,4 +12,5 @@
           %h1
             TOdo
           %p  TOdo APP
+        = link_to 'New task', new_task_path, class: 'btn btn-primary'
     = yield
